fix large gaps between forecasts on xs screens

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -72,12 +72,22 @@ h3 {
   font-size: 2rem;
 }
 
+//xs map
 #map {
   width: 100%;
   height: 43%;
 }
 
+.row {
+  height: 50%;
+}
+
+.forecast__day__header {
+  height: 20%;
+}
+
 @media(min-width: $screen-sm-min){
+  //sm map
   #map {
     width: 60%;
     height: 43%;
@@ -85,34 +95,18 @@ h3 {
 }
 
 @media(min-width: $screen-md-min){
+  //md map
   #map {
     width: 60%;
     height:43%;
   }
 }
 
-/*#map {
-  width: 100%;
-  height: 43%;
-
-  @media(min-width: $screen-sm-min){
-    width: 60%;
-    height: 43%;
-  }
-
-  @media(min-width: $screen-md-min) {
-    width: 60%;
-    height: 43%;
-  }
-}*/
-
 #forecast, #map {
   margin-bottom: 10px;
 }
 
-.row {
-  height: 50%;
-}
+
 
 //map
 
